--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul> 
             <li>
-                <li><h2>Homeg666665555555mmm</h2>
+                <li><h2>Home</h2>
                     <ul>
                       <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
                       <a href="skills.html"><li><h2>-Skills</h2></li></a>
