changed background and animations along with fonts

--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
             initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
             <link rel="stylesheet" type="text/css" href="css/KZ Portfolio.css">
-            <link rel="icon" href="images/logo.png" style="image/x-icon">
+            <link rel="icon" href="images/logo.jpg" style="image/x-icon">
     </head>
     <body>
+        <header>
+            <h1>Kade Zarinegar</h1>
+            <img src="images/logo.gif">
+        </header>
+        <div class="background">
+            <img src="images/background.jpg">
+        </div>
+        
         <div>
             <ul> 
             <li>
-                <li><h2>Home</h2>
+                <li class="flex1"><h2>Home</h2>
                     <ul>
                       <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
                       <a href="skills.html"><li><h2>-Skills</h2></li></a>
@@ -25,21 +33,15 @@
             </li>
             </ul>
         </div> 
-        <div class="left">
-            <img src="images/collab1.png">
-            <h1>K.G.Z</h1>
-        </div>
-        <header class="right">
-            <img src="images/collab1.png">
-        </header>
-        <header class="logo">
-            <img src="images/logo.PNG">
-        </header>
-        <div class="shipleft">
-            <img src="images/shipleft.png">
-        </div>
         <div class="gif">
             <img src="images/stargif.gif">
         </div>
+        <div class="back">
+            <img src="images/gif4.gif">
+        </div>
+        <div class="black">
+            <img src="images/black.jpg">
+        </div>
+
     </body>
 </html>
