Added contact info and fonts to Resume page

--- a/Resume Page.html
+++ b/Resume Page.html
@@ -13,9 +13,35 @@
         <div class="green">
             <img src="images/green.jpg">
         </div>
-    
-      <header>
+      <header class="res">
          <h1>~Resume Page~</h1>
       </header>
+      <div class="background">
+          <img src="images/background.jpg">
+      </div>
+      <div class="green2">
+          <img src="images/green.jpg">
+      </div>
+      <div class="topleft">
+          <img src="images/alienhead.png">
+      </div>
+      <div class="topright">
+        <img src="images/alienhead.png">
+    </div>
+    <div class="bottomleft">
+        <img src="images/alienhead.png">
+    </div>
+    <div class="bottomright">
+        <img src="images/alienhead.png">
+    </div>
+    <header class="name">
+        <h1>Kade Zarinegar</h1>
+    </header>
+    <div class="info">
+        <h3><a href="https://www.google.com/maps/place/1010+W+Joy+Ranch+Rd,+Phoenix,+AZ+85086/@33.8286282,-112.086773,16.53z/data=!4m5!3m4!1s0x872b62fc7dcb0f6f:0x8a50cbf560b7e396!8m2!3d33.8293383!4d-112.086564">1010 W Joy Ranch Rd., Desert Hills, Arizona 85086</a><h3>
+    </div>
+    <div class="info2">
+        <h3>C: <a href="tel:480-522-0864">480-522-0864</a> | E: <a href="mailto:Kadezar@gmail.com">Kadezar@gmail.com</a><h3>
+    </div>
     </body>
 </html>
