added to resume page

--- a/Resume Page.html
+++ b/Resume Page.html
@@ -43,5 +43,15 @@
     <div class="info2">
         <h3>C: <a href="tel:480-522-0864">480-522-0864</a> | E: <a href="mailto:Kadezar@gmail.com">Kadezar@gmail.com</a><h3>
     </div>
+    <div class="info3">
+        <h2>Personal Profile:</h2>
+        <p>Hardworking, methodical  first year Coding student who is able to work under pressure and able to<p>
+    </div>
+    <div class="mid">
+        <p>communicate objectives. Seeking the position of Coding.</p>
+    </div>
+    <div class="info4">
+        <h2>Knowledge, Skills, and Abilities:</h2>
+    </div>
     </body>
 </html>
