added more to res page

--- a/Resume Page.html
+++ b/Resume Page.html
@@ -53,5 +53,52 @@
     <div class="info4">
         <h2>Knowledge, Skills, and Abilities:</h2>
     </div>
+    <div class="info5">
+        <ul>
+            <li>Complex Problem Solving</li>
+            <ul>
+                <li> Identifying complex problems and reviewing related information to develop and evaluate options and implement solutions.</li>
+            </ul>
+            <li>Active Listening</li>
+            <uL>
+                <li>Giving full attention to what other people are saying, taking time to understand the points being made, asking questions as appropriate, and not interrupting at inappropriate times.</li>
+            </uL>
+            <li>Judgment and Decision Making</li>
+            <ul>
+                <li>Considering the relative costs and benefits of potential actions to choose the most appropriate one.</li>
+            </ul>
+            <li>Time Managment</li>
+            <ul>
+                <li>Managing one's own time and the time of others.</li>
+            </ul>
+            <li>Programming</li>
+            <ul>
+                <li>Writing computer programs for various purposes.</li>
+            </ul>
+        </ul>
+    </div>
+    <div class="education">
+        <h2>Education:</h2>
+    </div>
+    <div>
+        <ul class="ul">
+            <li class="flex1">Primavera Online High-School</li>
+            <li class="flex1">Phoenix AZ,</li>
+            <li class="flex1">Expected Grad Date: May 2021</li>
+        </ul>
+    </div>
+    <div class="ed">
+        <p>Relevant Coursework: Software Development, Mandarin 1-2/3-4, Honors Pre-Calculus</p>
+    </div>
+    <div class="info6">
+        <h2>Employment/Volunteer Activities:</h2>
+    </div>
+    <div>
+        <ul class="employ">
+            <li class="flex2">2019</li>
+            <li class="flex2">Phoenix, AZ</li>
+            <li class="flex2">8/2018-4/2019</li>
+        </ul>
+    </div>
     </body>
 </html>
