finished resume page and continued to add to the index

--- a/Resume Page.html
+++ b/Resume Page.html
@@ -100,5 +100,26 @@
             <li class="flex2">8/2018-4/2019</li>
         </ul>
     </div>
+    <div class="bus">
+        <strong><p>Country Club Busser</p></strong>
+    </div>
+    <div class="duty">
+        <p><strong>Responsibilities include:</strong> Assisting customers, General cleanliness, Move tables/chairs, Running Food</p>
+    </div>
+    <div class="drop">
+        <ul> 
+        <li>
+            <a href="C:\Users\kzarinegar706\Documents\Github\Proj\index.html"><li class="flex3"><h2>Home</h2></a>
+                <ul>
+                  <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
+                  <a href="skills.html"><li><h2>-Skills</h2></li></a>
+                  <a href="career.html"><li><h2>-Career</h2></li></a>
+                  <a href="History.html"><li><h2>-History</h2></li></a>
+                  <a href="Projects.html"><li><h2>-Projects</h2></li></a>
+                </ul>
+            </li>
+        </li>
+        </ul>
+    </div> 
     </body>
 </html>
