--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
         <div class="black">
             <img src="images/black.jpg">
         </div>
-
+        <div class="k">
+            <img src="images/k.png">
+        </div>
+        <div class="z">
+            <img src="images/z.png">
+        </div>
+        <div class="blackk">
+            <img src="images/black.jpg">
+        </div>
+        <div class="scroll">
+        <marquee behavior="scroll" direction="left"><p>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</p></marquee>
+        </div>
     </body>
 </html>
