--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="images/black.jpg">
         </div>
         <div class="scroll">
-        <marquee behavior="scroll" direction="left"><p>kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</p></marquee>
+        <marquee behavior="scroll" direction="right"><p>My Portfolio</p></marquee>
         </div>
     </body>
 </html>
