index and resume
changed the floating animation to a spaceship gif. changed the hover brightness on the drop down nav and the hover brightness on my address in the res page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="images/black.jpg">
         </div>
         <div class="scroll">
-        <marquee behavior="scroll" direction="right"><p>My Portfolio</p></marquee>
+        <marquee behavior="scroll" direction="left"><img src="images/spaceship.gif"></marquee>
         </div>
     </body>
 </html>
