--- a/index.html
+++ b/index.html
@@ -54,5 +54,11 @@
         <div class="scroll">
         <marquee behavior="scroll" direction="left"><img src="images/spaceship.gif"></marquee>
         </div>
+        <article>
+            <h1>About Me</h1>
+            <img src="images/test.png">
+            <p>I am an ambitious, young web developer attending first year West MEC program. My top priority is education and i am determined to do the most. </p>
+        </article>
+
     </body>
 </html>
