index and Projects
added a description of me and social media tags to the bottom of the index page. Created the projects page by adding background and gif with an opacity along with the heading with a typewriter animation. Also added the dropdown menu to the projects page.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
         <article>
             <h1>About Me</h1>
             <img src="images/test.png">
-            <p>I am an ambitious, young web developer attending first year West MEC program. My top priority is education and i am determined to do the most. </p>
+            <p>I am an ambitious, young web developer attending first year West MEC program.<br><br> My top priority is education and i am determined to strive. Highly motivated to<br><br> pursue my passion of being an experienced software developer. I am a leader<br><br> and dream of solving real world problems.</p>
+            <h3>C: <a href="tel:480-522-0864">480-522-0864</a> | E: <a href="mailto:Kadezar@gmail.com">Kadezar@gmail.com</a><h3></h3>
+            <ul>
+                <li class="flex"><img src="images/insta.png"></li>
+                <li class="flex"><img src="images/twitter.png"></li>
+                <li class="flex"><img src="images/face.png"></li>
+            </ul>
         </article>
-
     </body>
 </html>
