--- a/projects.html
+++ b/projects.html
@@ -40,5 +40,21 @@
             </li>
             </ul>
         </div> 
+        <div class="WM">
+            <a href="C:\Users\kzarinegar706\Documents\Projects\WestMec Website.zip (Unzipped Files)\WestMec Website\Indexwest-mec.html"><img src="images/WM.PNG"></a>
+            <h1>West-MEC<br>Website</h1>
+        </div>
+        <div class="TS">
+            <a href="C:\Users\kzarinegar706\Documents\Projects\travel site\FIndex.html"><img src="images/TS.png"></a>
+            <h1>Travel<br>Website</h1>
+        </div>
+        <div class="HS">
+            <a href="C:\Users\kzarinegar706\Documents\Projects\Hobby Website\Hobbyindex.html"><img src="images/HS.png"></a>
+            <h1>Hobby <br>Website</h1>
+        </div>
+        <div class="HW">
+            <a href="C:\Users\kzarinegar706\Documents\Projects\Hotwheels\Index.html"><img src="images/HW.png"></a>
+            <h1>Hotwheels<br>Website</h1>
+        </div>
     </body>
 </html>
