--- a/skills.html
+++ b/skills.html
@@ -12,22 +12,81 @@
     <body>
         <header>
             <h1>Skills and Training</h1>
+            <img src="images/movingstar.gif">
         </header>
         <div class="first">
-            <ul>
+            <!-- <ul>
                 <li class="flex"><img src="images/arrow.png"></li>
+                <li></li>
+                <li class="flex"><img src="images/blankstar.png"></li>
+                <li></li>
+                <li class="flex"><img src="images/blankstar.png"></li>
+                <li></li>
                 <li class="flex"><img src="images/star.gif"></li>
+                <li></li>
                 <li class="flex"><img src="images/star.gif"></li>
+                <li></li>
                 <li class="flex"><img src="images/star.gif"></li>
-            </ul>
+            </ul> -->
+            <img src="images/arrow.png"><br><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
         </div>
         <div class="second">
-            <ul>
-                <li class="flex"><img src="images/arrow.png"></li>
-                <li class="flex"><img src="images/star.gif"></li>
-                <li class="flex"><img src="images/star.gif"></li>
-                <li class="flex"><img src="images/star.gif"></li>
-            </ul>
+            <img src="images/arrow.png"><br><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
         </div>
+        <table>
+            <thead>
+            <tr>
+                <th></th>
+                <th>HTML</th>
+                <th>CSS</th>
+                <th>Java-Script</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th>Expert</th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Skilled</th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Average</th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Below-average</th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Beginner</th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+            <tfoot>
+
+            </tfoot>
+        </table>
     </body>
 </html>
