--- a/skills.html
+++ b/skills.html
@@ -11,38 +11,31 @@
     </head>
     <body>
         <header>
-            <h1>Skills and Training</h1>
+            <h1>Skills + Training</h1>
             <img src="images/movingstar.gif">
         </header>
-        <div class="first">
-            <!-- <ul>
-                <li class="flex"><img src="images/arrow.png"></li>
-                <li></li>
-                <li class="flex"><img src="images/blankstar.png"></li>
-                <li></li>
-                <li class="flex"><img src="images/blankstar.png"></li>
-                <li></li>
-                <li class="flex"><img src="images/star.gif"></li>
-                <li></li>
-                <li class="flex"><img src="images/star.gif"></li>
-                <li></li>
-                <li class="flex"><img src="images/star.gif"></li>
-            </ul> -->
-            <img src="images/arrow.png"><br><br><br>
-            <img src="images/blankstar.png"><br><br>
-            <img src="images/blankstar.png"><br><br>
-            <img src="images/star.gif"><br><br>
-            <img src="images/star.gif"><br><br>
-            <img src="images/star.gif"><br><br>
+        <div class="left">
+            <img src="images/movingstar.gif">
         </div>
-        <div class="second">
-            <img src="images/arrow.png"><br><br><br>
-            <img src="images/blankstar.png"><br><br>
-            <img src="images/blankstar.png"><br><br>
-            <img src="images/star.gif"><br><br>
-            <img src="images/star.gif"><br><br>
-            <img src="images/star.gif"><br><br>
-        </div>
+        <div>
+            <ul> 
+            <li>
+                <li class="flex1"><a href="C:\Users\kzarinegar706\Documents\Github\Proj\index.html"><h2>Home</h2></a>
+                    <ul>
+                      <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
+                      <a href="skills.html"><li><h2>-Skills</h2></li></a>
+                      <a href="career.html"><li><h2>-Career</h2></li></a>
+                      <a href="History.html"><li><h2>-History</h2></li></a>
+                      <a href="Projects.html"><li><h2>-Projects</h2></li></a>
+                    </ul>
+                </li>
+            </li>
+            </ul>
+        </div> 
+        <article>
+            <img src="images/shipp.png">
+            <h2>Coding Languages</h2>
+        </article>
         <table>
             <thead>
             <tr>
@@ -88,5 +81,32 @@
 
             </tfoot>
         </table>
+        <div class="first">
+            <img src="images/arrow.png"><br><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
+        </div>
+        <div class="second">
+            <img src="images/arrow.png"><br><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
+            <img src="images/star.gif"><br><br>
+        </div>
+        <div class="third">
+            <img src="images/arrow.png"><br><br><br>
+            <img class="hover"src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
+            <img src="images/star.gif"><br><br>
+        </div>
+        <div class="black">
+            <img src="images/black.jpg">
+        </div>
     </body>
 </html>
