--- a/projects.html
+++ b/projects.html
@@ -28,12 +28,11 @@
        <div>
             <ul> 
             <li>
-                <li class="flex1"><a href="C:\Users\kzarinegar706\Documents\Github\Proj\index.html"><h2>Home</h2></a>
+                <li class="flex1"><a href="index.html"><h2>Home</h2></a>
                     <ul>
                       <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
                       <a href="skills.html"><li><h2>-Skills</h2></li></a>
-                      <a href="career.html"><li><h2>-Career</h2></li></a>
-                      <a href="History.html"><li><h2>-History</h2></li></a>
+                      <a href="Work History.html"><li><h2>-Work History</h2></li></a>
                       <a href="Projects.html"><li><h2>-Projects</h2></li></a>
                     </ul>
                 </li>
@@ -41,19 +40,19 @@
             </ul>
         </div> 
         <div class="WM">
-            <a href="C:\Users\kzarinegar706\Documents\Projects\WestMec Website.zip (Unzipped Files)\WestMec Website\Indexwest-mec.html"><img src="images/WM.PNG"></a>
+            <a href="E:\Github\Proj\WestMec Website\Indexwest-mec.html"><img src="images/WM.PNG"></a>
             <h1>West-MEC<br>Website</h1>
         </div>
         <div class="TS">
-            <a href="C:\Users\kzarinegar706\Documents\Projects\travel site\FIndex.html"><img src="images/TS.png"></a>
+            <a href="E:\Github\Proj\travel site\FIndex.html"><img src="images/TS.png"></a>
             <h1>Travel<br>Website</h1>
         </div>
         <div class="HS">
-            <a href="C:\Users\kzarinegar706\Documents\Projects\Hobby Website\Hobbyindex.html"><img src="images/HS.png"></a>
+            <a href="E:\Github\Proj\Hobby Website\Hobbyindex.html"><img src="images/HS.png"></a>
             <h1>Hobby <br>Website</h1>
         </div>
         <div class="HW">
-            <a href="C:\Users\kzarinegar706\Documents\Projects\Hotwheels\Index.html"><img src="images/HW.png"></a>
+            <a href="E:\Github\Proj\Hotwheels\Index.html"><img src="images/HW.png"></a>
             <h1>Hotwheels<br>Website</h1>
         </div>
     </body>
