--- a/skills.html
+++ b/skills.html
@@ -20,12 +20,11 @@
         <div>
             <ul> 
             <li>
-                <li class="flex1"><a href="C:\Users\kzarinegar706\Documents\Github\Proj\index.html"><h2>Home</h2></a>
+                <li class="flex1"><a href="index.html"><h2>Home</h2></a>
                     <ul>
                       <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
                       <a href="skills.html"><li><h2>-Skills</h2></li></a>
-                      <a href="career.html"><li><h2>-Career</h2></li></a>
-                      <a href="History.html"><li><h2>-History</h2></li></a>
+                      <a href="Work History.html"><li><h2>-Work History</h2></li></a>
                       <a href="Projects.html"><li><h2>-Projects</h2></li></a>
                     </ul>
                 </li>
@@ -99,7 +98,7 @@
         </div>
         <div class="third">
             <img src="images/arrow.png"><br><br><br>
-            <img class="hover"src="images/blankstar.png"><br><br>
+            <img src="images/blankstar.png"><br><br>
             <img src="images/blankstar.png"><br><br>
             <img src="images/blankstar.png"><br><br>
             <img src="images/blankstar.png"><br><br>
@@ -108,5 +107,9 @@
         <div class="black">
             <img src="images/black.jpg">
         </div>
+        <aside>
+            <h1>Training</h1>
+            <p>This is my first year in learning coding languages </p>
+        </aside>
     </body>
 </html>
