--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                     <ul>
                       <a href="Resume Page.html"><li><h2>-Resume Page</h2></li></a>
                       <a href="skills.html"><li><h2>-Skills</h2></li></a>
-                      <a href="career.html"><li><h2>-Career</h2></li></a>
-                      <a href="History.html"><li><h2>-History</h2></li></a>
+                      <a href="Work History.html"><li><h2>-Work History</h2></li></a>
                       <a href="Projects.html"><li><h2>-Projects</h2></li></a>
                     </ul>
                 </li>
